--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-loading-skeleton": "^3.3.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "sass": "^1.64.2"
   },
